fixed overflow bug

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -40,6 +40,7 @@ footer{
     display: flex;
     flex-direction: column;
     gap:14px;
+    text-transform: capitalize;
 }
 .footer-services li{
     position: relative;
