--- a/src/pages/HomePage/HeroSection/HeroSection.css
+++ b/src/pages/HomePage/HeroSection/HeroSection.css
@@ -21,6 +21,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    overflow-y: hidden;
     transition: transform 1s;
 }
 .hero-card .lazy-load-image-background{
@@ -34,10 +35,12 @@
     transform: translate(-50%,-50%);
     font-size: 36px;
     font-weight: 500;
-    width: max-content;
-    padding: 0 30px;
+    padding: 0 20px;
     color: white;
     user-select: none;
+    text-align: center;
+    width: 100%;
+    max-width: max-content;
 }
 .hero-card p span{
     font-weight: 800;
